--- a/assets/css/assets/layout.css
+++ b/assets/css/assets/layout.css
@@ -1,20 +1,19 @@
 .header {
-  color: var(--color-primary);
+  color: var(--color-grey-light-1);
   height: 6rem;
   font-size: 1.6rem;
   text-transform: uppercase;
 }
 .header__content {
-  width: var(--container-width);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
   height: 100%;
 }
 .header__welcome {
   font-size: 2.5rem;
   letter-spacing: 0.2rem;
+  color: var(--color-primary);
 }
 .header__nav {
   display: flex;
@@ -30,10 +29,26 @@
   color: var(--color-grey-light-1);
 }
 
-.video-section {
+.video {
   position: relative;
   width: 100%;
-  height: 40rem;
+  height: 30rem;
+}
+
+.about__list {
+  margin: 2rem 0 2rem 3rem;
+  list-style: decimal;
+}
+.about__list-item {
+  font-size: 1.5rem;
+}
+
+.projects {
+  background-color: var(--color-background-secondary);
+}
+.projects__card-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=layout.css.map */
