--- a/assets/scss/assets/base.scss
+++ b/assets/scss/assets/base.scss
@@ -24,6 +24,7 @@ ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
+  color: var(--color-grey-light-1)
 }
 
 ol,
@@ -40,7 +41,8 @@ img {
   --color-primary: #1060a6;
   --color-primary-light: #668cad;
   --color-primary-dark: #6a859c;
-  --color-background: rgb(24, 26, 27);
+  --color-background: rgb(33, 35, 37);
+  --color-background-secondary: rgb(24, 26, 27);
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
