--- a/assets/scss/assets/components.scss
+++ b/assets/scss/assets/components.scss
@@ -13,3 +13,86 @@
     object-fit: cover;
   }
 }
+
+.text {
+  font-size: 1.6rem;
+  font-weight: 300;
+
+}
+
+.helper-text {
+  font-size: 1.6rem;
+}
+
+.section-title {
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+}
+
+.section-sub-title {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.4rem;
+  font-weight: 300;
+}
+
+.card {
+  height: 40rem;
+  background-color: var(--color-background);
+  flex: 1;
+  margin: 0 2rem 4rem 2rem;
+  transition: all 0.2s;
+
+  border-radius: 5px;
+
+  &__title {
+    font-size: 1.8rem;
+  }
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
+.form {
+  &__input {
+    font-size: 1.5rem;
+    color: inherit;
+    font-family: inherit;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: var(--color-background-secondary);
+    border: 1px solid var(--color-grey-light-1);
+    // border-bottom: 3px solid transparent;
+    width: 100%;
+    display: block;
+    transition: all .3s;
+
+    &:not(:last-child) {
+      margin-right: 6rem;
+    }
+
+    &:focus {
+      outline: none;
+      // box-shadow: 0 1rem 2rem rgba($color-black, .1);
+      // border-bottom: 3px solid $color-primary;
+
+      &:invalid {
+        // border-bottom: 3px solid $color-secondary-dark;
+      }
+    }
+
+    &::-webkit-input-placeholder {
+      color: var(--color-grey-light-4);
+    }
+  }
+
+
+
+  &__row {
+    margin: 4rem 0;
+    display: flex;
+    flex: 1;
+  }
+}
