--- a/assets/css/assets/layout.css
+++ b/assets/css/assets/layout.css
@@ -51,4 +51,34 @@
   justify-content: space-between;
 }
 
+.footer {
+  background-color: var(--color-background-secondary);
+}
+.footer__container {
+  padding: 3rem;
+  display: flex;
+}
+.footer__item {
+  height: 30rem;
+  flex: 1;
+}
+.footer__item:not(:last-child) {
+  margin-right: 3rem;
+}
+.footer__link-list {
+  list-style: none;
+  color: var(--color-primary);
+}
+.footer__link-item {
+  border-bottom: solid 1px var(--color-grey-dark-1);
+  padding: 1.5rem 0;
+}
+.footer__link, .footer__link:link, .footer__link:visited {
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  font-size: var(--default-font-size);
+  color: var(--color-primary);
+}
+
 /*# sourceMappingURL=layout.css.map */
