--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ img {
 }
 
 :root {
-  --color-primary: #1060a6;
+  --color-primary: #2e9dff;
   --color-primary-light: #668cad;
   --color-primary-dark: #6a859c;
   --color-background: rgb(33, 35, 37);
@@ -48,11 +48,14 @@ img {
   --color-grey-light-3: #f0eeee;
   --color-grey-light-4: #ccc;
   --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
+  --color-grey-dark-2: #555;
+  --color-grey-dark-3: #777;
+  --color-grey-dark-4: #999;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --container-width: 70%;
+  --default-font-size: 1.6rem;
+  --link-font-size: 2rem;
 }
 
 .bg-video {
@@ -68,6 +71,30 @@ img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+.name-overlay {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  color: white;
+  background-color: var(--color-background-secondary);
+  transform: translateY(-50%) skew(-20deg);
+}
+.name-overlay__container {
+  padding: 2rem 6rem;
+  transform: skew(20deg);
+}
+.name-overlay__primary {
+  font-size: 5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+}
+.name-overlay__sub {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  color: var(--color-primary);
 }
 
 .text {
@@ -114,7 +141,7 @@ img {
   padding: 1.5rem 2rem;
   border-radius: 2px;
   background-color: var(--color-background-secondary);
-  border: 1px solid var(--color-grey-light-1);
+  border: 1px solid var(--color-grey-dark-2);
   width: 100%;
   display: block;
   transition: all 0.3s;
@@ -128,10 +155,35 @@ img {
 .form__input::-webkit-input-placeholder {
   color: var(--color-grey-light-4);
 }
+.form__textareas {
+  height: 20rem;
+}
 .form__row {
   margin: 4rem 0;
   display: flex;
   flex: 1;
+}
+
+.btn, .btn:link, .btn:visited {
+  text-decoration: none;
+  padding: 0.95rem 2.5rem;
+  display: inline-block;
+  transition: all 0.2s;
+  position: relative;
+  font-size: var(--default-font-size);
+  border: none;
+  cursor: pointer;
+}
+.btn:hover {
+  transform: scale(1.05);
+}
+.btn:active, .btn:focus {
+  outline: none;
+  transform: scale(1.05);
+}
+.btn--primary {
+  background-color: var(--color-primary);
+  color: var(--color-grey-light-1);
 }
 
 .header {
@@ -185,6 +237,36 @@ img {
 .projects__card-container {
   display: flex;
   justify-content: space-between;
+}
+
+.footer {
+  background-color: var(--color-background-secondary);
+}
+.footer__container {
+  padding: 3rem;
+  display: flex;
+}
+.footer__item {
+  height: 30rem;
+  flex: 1;
+}
+.footer__item:not(:last-child) {
+  margin-right: 3rem;
+}
+.footer__link-list {
+  list-style: none;
+  color: var(--color-primary);
+}
+.footer__link-item {
+  border-bottom: solid 1px var(--color-grey-dark-1);
+  padding: 1.5rem 0;
+}
+.footer__link, .footer__link:link, .footer__link:visited {
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  font-size: var(--default-font-size);
+  color: var(--color-primary);
 }
 
 .margin-bottom-small {
